# Superpowered

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/vn/soft/dc/recordengine30/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/vn/soft/dc/recordengine30/: Application.java  AudioControllerActivity.java  ChooseActivity.java  DevActivity.java  MainActivity.java  MediaActivity.java  RemoteActivity.java
app/src/main/java/vn/soft/dc/recordengine30/adapter/: MusicAdapter.java  PresetAdapter.java
app/src/main/java/vn/soft/dc/recordengine30/manager/: SongsManager.java
app/src/main/java/vn/soft/dc/recordengine30/model/: Music.java
app/src/main/java/vn/soft/dc/recordengine30/popup/: PopupChooseMusicFragment.java  PopupChoosePresetFragment.java
app/src/main/res/drawable/: border_item_home_white.xml
app/src/main/res/layout/: activity_audio_controller.xml  activity_choose.xml  activity_dev.xml  activity_main.xml  activity_media.xml  activity_remote.xml  activity_youtuberecord.xml  item_choose.xml  panel_n_band_eq.xml  popup_choose.xml
app/src/main/res/raw/: acoustic.txt  bolero.txt  karaoke.txt  karaoke_room.txt  master.txt  pop_star.txt  pop_star_fix.txt  rap.txt  studio.txt
app/src/main/res/values/: strings.xml
app/src/test/java/vn/soft/dc/recordengine30/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
recordengine/: CMakeLists.txt  build.gradle
recordengine/src/main/: AndroidManifest.xml
recordengine/src/main/java/vn/soft/dc/recordengine/: MediaEngine.java  RecorderEngine.java
recordengine/src/main/java/vn/soft/dc/recordengine/audio/calculators/: AudioCalculator.java  FrequencyCalculator.java  RealDoubleFFT.java
recordengine/src/main/java/vn/soft/dc/recordengine/audio/core/: Callback.java
recordengine/src/main/java/vn/soft/dc/recordengine/model/: Preset.java  PresetManager.java
recordengine/src/main/java/vn/soft/dc/recordengine/util/: FileUtils.java
recordengine/src/main/jni/: media-engine.cpp  media-engine.h  record-engine.cpp  record-engine.h
recordengine/src/main/libs/superpowered/AndroidIO/: SuperpoweredAndroidAudioIO.cpp
recordengine/src/main/res/values/: strings.xml
(+9 files in other folders)
